# pymatchit

./: AGENTS.md  README.md  pyproject.toml
docs/: full_matching_design.md
examples/.ipynb_checkpoints/: lalonde_like_demo-checkpoint.py
src/pymatchit/: __init__.py  api.py  diagnostics.py  distances.py  plots.py  weights.py
src/pymatchit/matching/: __init__.py  exact.py  full.py  nearest.py  optimal.py  subclass.py
tests/: Untitled.ipynb  test_imports.py
tests/.ipynb_checkpoints/: test_imports-checkpoint.py
